# iec62056

./: .envrc  .gitignore  .travis.yml  MANIFEST.in  README.md  iec62056.py  objects.py  parsers.py  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: publish-pypi.yaml
iec62056/: __init__.py  grammar.lark  objects.py  parser.py  samples.py
samples/: dsmr_v2_2  dsmr_v3  iskra-mt382  kaifa-ma-105  kamstrup
