[metadata]
name = iec62056
version = 0.5.0
description = Library to parse IEC62056/IEC1107/DSMR telegrams
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jonkerj/iec62056
author = Jorik Jonker
author_email = jorik@kippendief.biz
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
project_urls =
    Documentation = https://github.com/jonkerj/iec62056
    Source = https://github.com/jonkerj/iec62056
    Tracker = https://github.com/jonkerj/iec62056

[options]
include_package_data = True
install_requires =
  lark == 1.0.0
platforms = any
packages = find:

[bdist_wheel]
universal = 1
